--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ ul{
   background: #f0efef;
 }
 
-.todo-selected{
+.todo-complete {
   font-style: italic;
    color: rgb(89, 89, 89); 
    opacity: 0.7; 
