--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   background: #f0efef;
 }
 
-.input-submit{
+.input-submit {
   background-color: #5b5b5b;
   opacity: 0.6;
   color: #fff;
@@ -49,17 +49,17 @@
 }
 
 .input-text {
-width: 85%;
-padding-right: 5px;
-padding-left: 10px;
-border-radius: 50px;
-font-size: 1rem;
-height: 45px;
-outline: none;
-border: none;
+  width: 85%;
+  padding-right: 5px;
+  padding-left: 10px;
+  border-radius: 50px;
+  font-size: 1rem;
+  height: 45px;
+  outline: none;
+  border: none;
 }
 
-ul{
+ul {
   margin: 0;
   padding: 5px;
   list-style-type: none;
@@ -77,7 +77,7 @@ ul{
   justify-content: space-between;
 }
 
-.todo-check{
+.todo-check {
   font-size: 1rem;
   list-style-type: none;
   padding: 14px 25px;
@@ -87,11 +87,16 @@ ul{
 
 .todo-complete {
   font-style: italic;
-   color: rgb(89, 89, 89); 
-   opacity: 0.7; 
-   text-decoration: line-through;
+  color: #595959;
+  opacity: 0.8;
+  text-decoration: line-through;
 }
 
-.d-none{
-  display: none;
+.content-button {
+  cursor: pointer;
+  background: transparent;
+  outline: none;
+  outline: none;
+  border: none;
+  margin-left: 7px;
 }
